--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-    docker build -t fjorgemota/chatmeterbot .
+    docker build -t fjorgemota/chatmeterbot .;
     docker push fjorgemota/chatmeterbot;
     fi
 services:
